Fix: hide scrollbar on firefox and I.E

--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -86,6 +86,8 @@ $fitty_pixels: 50px;
             &::-webkit-scrollbar{
                 display: none;
             }
+            scrollbar-width: none; /* firefox */
+            -ms-overflow-style: none;  /* Internet Explorer 10+ */
         }
     }
 
